All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Run_Type__c.field-meta.xml
<CustomField>
    <fullName>Run_Type__c</fullName>
    <label>Run Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day of Week</fullName>
            </value>
            <value>
                <fullName>Date of Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>