All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <description>This field provides additional information for scheduling by defining the type of schedule to be ran.</description>
    <label>Schedule Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>