All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Sequence in which the Inventory Process Step is to be excuted.</description>
    <inlineHelpText>Enter the execution Sequence for the Inventory Process Step.</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>