All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Service_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Team</label>
    <referenceTo>Service_Group__c</referenceTo>
    <relationshipLabel>ServiceMax Config Data</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>