All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Setting_Configuration_Profile__c.field-meta.xml
<CustomField>
    <fullName>Setting_Configuration_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup To &apos;ServiceMax Configuration Data&apos; object. Record Type &apos;Configuration Profile&apos;, Used in Setting Value.</description>
    <inlineHelpText>Select the configuration profile for the setting value.</inlineHelpText>
    <label>Configuration Profile</label>
    <referenceTo>ServiceMax_Config_Data__c</referenceTo>
    <relationshipLabel>ServiceMax Settings &amp; Values</relationshipLabel>
    <relationshipName>SVMX_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>