All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Setting_ID__c.field-meta.xml
<CustomField>
    <fullName>Setting_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the setting definition for which value is entered.</description>
    <inlineHelpText>Select the setting for which you are entering value.</inlineHelpText>
    <label>Setting ID</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Config Data (Setting ID)</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data3</relationshipName>
    <type>Lookup</type>
</CustomField>