All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Setting_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Setting_Unique_ID__c</fullName>
    <description>Unique ID of the setting across all submodules</description>
    <formula>Setting_ID__r.Setting_Unique_ID__c</formula>
    <inlineHelpText>Unique ID of the setting across all submodules</inlineHelpText>
    <label>Setting Unique ID</label>
    <type>Text</type>
</CustomField>