All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/SettingID__c.field-meta.xml
<CustomField>
    <fullName>SettingID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to ServiceMax Configuration</description>
    <inlineHelpText>Lookup to ServiceMax Configuration - NO LONGER USED. REMOVE FROM ALL SCREENS.</inlineHelpText>
    <label>Setting ID DO NOT USE</label>
    <referenceTo>ServiceMax_Settings__c</referenceTo>
    <relationshipLabel>ServiceMax Setting Values</relationshipLabel>
    <relationshipName>SVMX_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>