All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>ServiceMax Config Data</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>