All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/SM_CORD_Config__c.field-meta.xml
<CustomField>
    <fullName>SM_CORD_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate ServiceMax Config Data with Change Order Configuration.</description>
    <inlineHelpText>This field is used to associate ServiceMax Config Data with Change Order Configuration.</inlineHelpText>
    <label>CORD Configuration</label>
    <referenceTo>SM_Change_Order_Configuration__c</referenceTo>
    <relationshipLabel>ServiceMax Config Data</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>