All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/SM_Device_Mobile_Config__c.field-meta.xml
<CustomField>
    <fullName>SM_Device_Mobile_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field stores device mobile configuration tagged to servicemax group profile</description>
    <label>Device Mobile Config</label>
    <referenceTo>SM_Device_Mobile_Config__c</referenceTo>
    <relationshipLabel>ServiceMax Config Data</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>