All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/SM_Display_Value2__c.field-meta.xml
<CustomField>
    <fullName>SM_Display_Value2__c</fullName>
    <label>Display Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>