All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/SM_Prior_Timesheet_Periods__c.field-meta.xml
<CustomField>
    <fullName>SM_Prior_Timesheet_Periods__c</fullName>
    <description>This field is to capture the number of prior period time entries to process: Number where 0 = existing behavior (i.e. current period only, default = 0), 1 = current + 1 prior, 2 = current + 2 prior, etc</description>
    <label>Prior Timesheet Periods</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>