All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/SM_Question__c.field-meta.xml
<CustomField>
    <fullName>SM_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store reference to Question.</description>
    <inlineHelpText>Used to store reference to Question.</inlineHelpText>
    <label>Question</label>
    <referenceTo>Question_Bank__c</referenceTo>
    <relationshipLabel>ServiceMax Config Data</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>