All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/SM_Related_Info__c.field-meta.xml
<CustomField>
    <fullName>SM_Related_Info__c</fullName>
    <description>Field to capture formula fields metadata</description>
    <inlineHelpText>Field to capture formula fields metadata</inlineHelpText>
    <label>Related Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>