All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/SM_Scope__c.field-meta.xml
<CustomField>
    <fullName>SM_Scope__c</fullName>
    <description>This will store the combination of name and id in a JSON format.</description>
    <label>Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>