All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ascending</fullName>
                <default>true</default>
                <label>Ascending</label>
            </value>
            <value>
                <fullName>Descending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>