All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Stock_History_Line_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Stock_History_Line_Lookup_Field__c</fullName>
    <description>API Name of the reference Field in Stock History for the Line transaction, This would be updated to bind a reference between Stock History and the transaction.</description>
    <inlineHelpText>Enter API Name of the reference field in Stock History for the Line transaction.</inlineHelpText>
    <label>Stock History Line Lookup Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>