All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Stock_Status__c.field-meta.xml
<CustomField>
    <fullName>Stock_Status__c</fullName>
    <description>Enter the Status of Stock (Ex: Available, In-Transit, Consumed etc.)</description>
    <inlineHelpText>Enter the Status of Stock.</inlineHelpText>
    <label>Stock Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>