All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Unprocessed__c.field-meta.xml
<CustomField>
    <fullName>Unprocessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unprocessed</label>
    <type>Checkbox</type>
</CustomField>