All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Validate_User_Credentials_Every__c.field-meta.xml
<CustomField>
    <fullName>Validate_User_Credentials_Every__c</fullName>
    <label>Validate User Credentials Every</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>