All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Wizard_Layout_Column__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Layout_Column__c</fullName>
    <label>Wizard Layout Column</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>