All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/Applicable_Skills.recordType-meta.xml
<RecordType>
    <fullName>Applicable_Skills</fullName>
    <active>true</active>
    <label>Applicable Skills</label>
</RecordType>