All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/Change_Order_Access.recordType-meta.xml
<RecordType>
    <fullName>Change_Order_Access</fullName>
    <active>true</active>
    <description>Profile assignments on Change Order Configuration</description>
    <label>Change Order Access</label>
</RecordType>