All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/Configuration_Access.recordType-meta.xml
<RecordType>
    <fullName>Configuration_Access</fullName>
    <active>true</active>
    <description>Configuration Access</description>
    <label>Configuration Access</label>
</RecordType>