All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/Configuration_Profile.recordType-meta.xml
<RecordType>
    <fullName>Configuration_Profile</fullName>
    <active>true</active>
    <description>Configuration Profile</description>
    <label>Configuration Profile</label>
</RecordType>