All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/Field_Updates.recordType-meta.xml
<RecordType>
    <fullName>Field_Updates</fullName>
    <active>true</active>
    <description>Field Updates details defined as SFM Formulas.</description>
    <label>Field Updates</label>
</RecordType>