All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/Fulfillment_Path.recordType-meta.xml
<RecordType>
    <fullName>Fulfillment_Path</fullName>
    <active>true</active>
    <description>Fulfillment Path</description>
    <label>Fulfillment Path</label>
</RecordType>