All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/Offline_Profile.recordType-meta.xml
<RecordType>
    <fullName>Offline_Profile</fullName>
    <active>true</active>
    <description>Record type to define ServiceMax Offline Profiles</description>
    <label>Offline Profile</label>
</RecordType>