All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/Schedule.recordType-meta.xml
<RecordType>
    <fullName>Schedule</fullName>
    <active>true</active>
    <description>Schedule</description>
    <label>Schedule</label>
</RecordType>