All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/Search_Access.recordType-meta.xml
<RecordType>
    <fullName>Search_Access</fullName>
    <active>true</active>
    <description>Search Access</description>
    <label>Search Access</label>
</RecordType>