All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/Service_Flow_Access.recordType-meta.xml
<RecordType>
    <fullName>Service_Flow_Access</fullName>
    <active>true</active>
    <description>Service Flow Access</description>
    <label>Service Flow Access</label>
</RecordType>