All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/SF_Action_Parameter.recordType-meta.xml
<RecordType>
    <fullName>SF_Action_Parameter</fullName>
    <active>true</active>
    <description>Parameter for the Service Flow Action</description>
    <label>SF Action Parameter</label>
</RecordType>