All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/SPM_Details.recordType-meta.xml
<RecordType>
    <fullName>SPM_Details</fullName>
    <active>true</active>
    <label>SPM Details</label>
</RecordType>