All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/Timesheet_Access.recordType-meta.xml
<RecordType>
    <fullName>Timesheet_Access</fullName>
    <active>true</active>
    <description>Timesheet configuration access</description>
    <label>Timesheet Access</label>
</RecordType>