All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/Wizard_Access.recordType-meta.xml
<RecordType>
    <fullName>Wizard_Access</fullName>
    <active>true</active>
    <description>Wizard Access</description>
    <label>Wizard Access</label>
</RecordType>