All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/recordTypes/Wizard_Layout.recordType-meta.xml
<RecordType>
    <fullName>Wizard_Layout</fullName>
    <active>true</active>
    <description>Wizard Layout</description>
    <label>Wizard Layout</label>
</RecordType>